tests/negative/Test13.sp
(* Calling unexisting function *)
f(3);
